3.0.0 release final